utils/kubernetes/velero-dashboard-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: velero-dashboard
  labels:
    app: velero-dashboard
  namespace: velero
spec:
  replicas: 1
  selector:
    matchLabels:
      app: velero-dashboard
  template:
    metadata:
      labels:
        app: velero-dashboard
    spec:
      containers:
        - name: velero-dashboard
          image: klinux/velero-dashboard:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 512Mi
          ports:
            - containerPort: 8080
              name: http
