utils/kubernetes/velero-dashboard-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: velero-dashboard-svc
  labels:
    app: velero-dashboard-svc
  namespace: velero
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http
      protocol: TCP
      targetPort: 8080
  selector:
    app: velero-dashboard
